stylesheets/ml/misc.less
/* ... */
.mz-pagefooter-copyright {
    font-size: 13px;
    float: left;
    margin-top: 30px;
}
#mz-drop-zone-copyright{
    float: right;
}

@media (max-width: 767px) {     
    //login popup       
    .modal-dialog.login-modal{      
        width:87%!important;        
        .modal-content{         
            top: 48px!important;                        
            .nav-tabs{          
                top: -37px!important;                   
                li{     
                    width: 48%!important;                           
                    margin-bottom: 7px;     
                    .arrow{top: 27px; right: 62%;}      
                    .login-btn{height: 28px; line-height: 28px; padding: 0 13px;}       
                }       
                li.second-tab{      
                    width: 51%!important;       
                    .arrow{right: 52%;}     
                }       
            }       
            .login-btn{width:99%!important; padding: 0 32px;}       
        }       
    } 
    .ml-header-links-wrapper{
        .popover{
            left: -8px!important; 
            .my-account-details{
                p{
                    display: none;
                }
            }

        }     
    }
    .mz-cms-block{text-align: center;}
    .ml-header-global-cart-wrapper, .ml-header-global-cart-wrapper:hover{
        #global-cart{display: none!important;}
    }
    .mz-sitenav-sub-container{display: none!important;}

    .mz-l-paginatedlist{
        .mz-pagingcontrols, .mz-pagenumbers{
            float: left;
        }
    } 
    .mz-l-pagecontent{ padding: 25px 8.5px;}
    

    footer {
        .email-container {
            margin-right: 75px;
        }
        .social-links,.mz-pagefooter-copyright {
            text-align: center;
        }
        
    } 

}

@media (max-width: 360px) {
    //mz-utilitynav-list item spacing reduced
    .mz-utilitynav-item{padding: 0 10px 0 0!important;}

    //login popup
    .modal-dialog.login-modal{       
        .modal-content{
            top: 77px!important;            
            .nav-tabs{
                top: -70px!important;;
                li{
                    width: 51%!important;
                    left: 24%;
                    margin-bottom: 7px;
                    .arrow{top: 26px; right: 62%;}
                    .login-btn{height: 27px; line-height: 27px; padding: 0 13px;}
                }
                li.second-tab{
                    width: 51%!important; 
                    left: 51px;
                    .arrow{right: 50%;}
                }
            }            
        }
    }
    
}

